# find-jobs-ai-agents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/empregos/: crew.py  main.py
src/empregos/config/: agents.yaml  inputs.example.yaml  tasks.yaml
