[tool.poetry]
name = "empregos"
version = "0.1.0"
description = "empregos using crewAI"
authors = ["Leonardo <leonardo.bits@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.85.0" }
selenium = "^4.21.0"

[tool.poetry.scripts]
empregos = "empregos.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
